<resources>
    <string name="app_name">MobDevPract5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="e_mail">E-mail</string>
    <string name="return_button">Return</string>
    <string name="submit">Submit</string>
    <string name="default_notification_channel_id">channel_id</string>
    <string name="authorization">slkf</string>
    <string name="email_login_hint">faf</string>
    <string name="password_hint">ag</string>
    <string name="button_login">e\'ng</string>
    <string name="sign_up">.dskm b</string>
</resources>