<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <!-- Заголовок -->
    <TextView
        android:id="@+id/textView_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/authorization"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textColor="@color/beer_dark" />

    <!-- Поле ввода email -->
    <EditText
        android:id="@+id/editText_email"
        android:layout_width="0dp"
        android:hint="@string/email_login_hint"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_title" />

    <!-- Поле ввода пароля -->
    <EditText
        android:id="@+id/editText_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/editText_email"
        app:layout_constraintStart_toStartOf="@id/editText_email"
        app:layout_constraintTop_toBottomOf="@id/editText_email" />

    <!-- Кнопка "Войти" -->
    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        app:layout_constraintTop_toBottomOf="@id/editText_password"
        app:layout_constraintStart_toStartOf="@id/editText_password"
        app:layout_constraintEnd_toEndOf="@id/editText_password"
        android:layout_marginTop="32dp"/>

    <!-- Ссылка на страницу регистрации -->
    <TextView
        android:id="@+id/textView_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        app:layout_constraintStart_toStartOf="@id/button_login"
        app:layout_constraintEnd_toEndOf="@id/button_login"
        android:layout_marginTop="16dp"
        android:textColor="@color/beer_gold"/>

    <ImageView
        android:id="@+id/dr_livsy"
        android:layout_width="366dp"
        android:layout_height="274dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

</androidx.constraintlayout.widget.ConstraintLayout>